<resources>
    <string name="app_name">Location Log App</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_a_new_password">Enter a New Password</string>
    <string name="enter_the_password_again">Enter the password again</string>
    <string name="map_view_current_location">Map View Current Location</string>
    <string name="show_list_track_locatino">Show List - Track Location</string>
    <string name="title_activity_location_list">LocationListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logout">Logout</string>
    <string name="no_data_found">No Data Found</string>
    <string name="title_activity_p_ick_current_location_maps">Map</string>
    <string name="save_location">Save Location</string>
    <string name="permission_denied_explanation">Location Permission Denied</string>
    <string name="settings">Check Settings</string>
    <string name="no_location_detected">Location Not Detected</string>
    <string name="permission_rationale">Location Permission Required</string>
    <string name="title_activity_maps_with_play">Map</string>


    <string name="credits">
    Icons made by <a href="https://www.flaticon.com/authors/pixelmeetup" title="Pixelmeetup">Pixelmeetup</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>

    </string>
    <string name="credis">
    Icons made by <a href="https://www.flaticon.com/free-icon/man_2922524?term=user&amp;page=2&amp;position=85" title="Vitaly Gorbachev">Vitaly Gorbachev</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>

    </string>

    <string name="keyiconcredit">
        Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
    </string>

    <string name="logincrediticonmade">
        Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
    </string>

    <string name="registericon">
        Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
    </string>

    <string name="regicheck">
        Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
    </string>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_main_new_dashboard">MyMainNewDashboardActivity</string>
    <string name="tab_text_1">Map View</string>
    <string name="tab_text_2">List View</string>
    <string name="sign_up_btn">Sign Up</string>
</resources>
