<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DashboardActivity">

    <Button
        android:id="@+id/currentLocationViewBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="moveToMapCurrentLocation"
        android:text="@string/map_view_current_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/listLatLngBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="moveToLocationList"
        android:text="@string/show_list_track_locatino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentLocationViewBtn" />

    <Button
        android:id="@+id/logotuBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/listLatLngBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="logoutFunction"
        android:text="@string/logout"/>
</androidx.constraintlayout.widget.ConstraintLayout>