<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="Welcome !\nCreate your new account !"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/fabProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabProfile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:background="@android:color/white"
            android:scaleType="center"
            android:src="@drawable/person"
            app:backgroundTint="@android:color/white"
            app:fabCustomSize="150dp"
            app:fabSize="normal"
            app:layout_constraintBottom_toTopOf="@id/credentialCard"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintWidth_percent="0.3"
            app:maxImageSize="100dp" />


        <androidx.cardview.widget.CardView
            android:id="@+id/credentialCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fabProfile"
            app:layout_constraintWidth_percent="0.85">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/userNameEditTextRegister"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/edt_margin"
                    android:drawableLeft="@drawable/ic_person_icon"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:hint="@string/enter_user_name"
                    android:inputType="text"
                    android:paddingLeft="@dimen/padding_leftet"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/passwordEditTextRegister"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/edt_margin"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:hint="@string/enter_a_new_password"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/padding_leftet"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/userNameEditTextRegister" />

                <EditText
                    android:id="@+id/confirmPasswordEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/edt_margin"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:hint="@string/enter_the_password_again"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/padding_leftet"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordEditTextRegister" />

                <Button
                    android:id="@+id/signUpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/btn_margin"
                    android:background="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_register"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:padding="@dimen/btn_padding"
                    android:paddingLeft="@dimen/padding_leftet"
                    android:text="@string/sign_up_btn"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/confirmPasswordEditText" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>